--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.1.1",
+    "@react-navigation/native": "^6.0.6",
+    "@ui-kitten/components": "^5.1.1",
     "expo": "~43.0.0",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
-    "react-native-web": "0.17.1"
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-web": "0.17.1",
+    "zustand": "^3.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
