--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
     "expo": "~43.0.0",
+    "expo-image-manipulator": "~10.1.2",
+    "expo-image-picker": "~11.0.3",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
