--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@ui-kitten/components": "^5.1.1",
     "@ui-kitten/eva-icons": "^5.1.1",
+    "dayjs": "^1.10.7",
     "expo": "~43.0.0",
     "expo-asset": "~8.4.3",
     "expo-file-system": "~13.0.3",
