--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "expo-file-system": "~13.0.3",
     "expo-image-manipulator": "~10.1.2",
     "expo-image-picker": "~11.0.3",
+    "expo-location": "^13.0.4",
     "expo-secure-store": "~11.0.3",
     "expo-sqlite": "~10.0.3",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-maps": "^0.29.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-svg": "^12.1.1",
