--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-secure-store": "~11.0.3",
     "expo-sqlite": "~10.0.3",
     "expo-status-bar": "~1.1.0",
+    "expo-task-manager": "^10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
