--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "expo-secure-store": "~11.0.3",
     "expo-sqlite": "~10.0.3",
     "expo-status-bar": "~1.1.0",
-    "expo-task-manager": "^10.0.3",
+    "expo-task-manager": "~10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.2",
-    "react-native-maps": "^0.29.4",
+    "react-native": "0.64.3",
+    "react-native-maps": "0.28.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-svg": "^12.1.1",
