--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-svg": "^12.1.1",
     "react-native-toast-message": "^2.0.1",
     "react-native-web": "0.17.1",
+    "swr": "^1.1.2",
     "zustand": "^3.6.5"
   },
   "devDependencies": {
