--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-file-system": "~13.0.3",
     "expo-image-manipulator": "~10.1.2",
     "expo-image-picker": "~11.0.3",
+    "expo-local-authentication": "~12.0.1",
     "expo-location": "^13.0.4",
     "expo-secure-store": "~11.0.3",
     "expo-sqlite": "~10.0.3",
