--- a/app.json
+++ b/app.json
@@ -29,7 +29,8 @@
         "FOREGROUND_SERVICE",
         "ACCESS_COARSE_LOCATION",
         "ACCESS_FINE_LOCATION"
-      ]
+      ],
+      "package": "com.nsp.findmefindyou"
     },
     "web": {
       "favicon": "./assets/favicon.png"
